--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@
 
 DATABASE_URL="postgresql://myuser:mypassword@localhost:5432/mydb?schema=public"
 
+NEXT_PUBLIC_API_URL="http://localhost:3000/api"
+
 NEXTAUTH_SECRET="314159dbd5272015ec5fb10bbb89409b"
 GOOGLE_ID = 203550543475-p35mbp9t99aupb6bd6uoqgdmgo4cd2so.apps.googleusercontent.com
 GOOGLE_SECRET = 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
