--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "sweetalert2": "^11.7.31",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zustand": "^4.4.1"
