--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
+    "next-cloudinary": "^4.23.0",
     "postcss": "8.4.27",
     "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.31",
     "tailwindcss": "3.3.3",
