--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@
 DATABASE_URL="mysql://sptmvecbo14tafpf:fpvd3a8tbsz644ak@qz8si2yulh3i7gl3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pic81nxp8zco8xl7"
 
 NEXT_PUBLIC_API_URL="http://localhost:3000/api"
+AZURE_PUBLIC_API_URL="https://los-toneles.azurewebsites.net"
+#AZURE_PUBLIC_API_URL="https://localhost:8000/"
 
 NEXTAUTH_SECRET="314159dbd5272015ec5fb10bbb89409b"
 GOOGLE_ID = 203550543475-p35mbp9t99aupb6bd6uoqgdmgo4cd2so.apps.googleusercontent.com
