category menu implemented

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
-    "next": "13.4.16",
+    "next": "^13.4.16",
     "next-cloudinary": "^4.23.0",
     "postcss": "8.4.27",
     "prisma": "^5.2.0",
