--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@vercel/speed-insights": "^1.0.2",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
