--- a/.env
+++ b/.env
@@ -4,7 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://sptmvecbo14tafpf:fpvd3a8tbsz644ak@qz8si2yulh3i7gl3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pic81nxp8zco8xl7"
+#* PRODUCTION DATABASE
+#! Do not uncomment this line unless you are testing the production database. The deployment automatically sets the DATABASE_URL environment variable.
+#DATABASE_URL="mysql://sptmvecbo14tafpf:fpvd3a8tbsz644ak@qz8si2yulh3i7gl3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pic81nxp8zco8xl7"
+
+#* DEVELOPMENT DATABASE
+DATABASE_URL="mysql://kdzxva205cfxuoxh:gyyhplfffu55rvzv@otwsl2e23jrxcqvx.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/zg9sn5kvl69njqo3"
 
 NEXT_PUBLIC_API_URL="http://localhost:3000/api"
 AZURE_PUBLIC_API_URL="https://los-toneles.azurewebsites.net"
