--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
+    "@react-hook/media-query": "^1.1.1",
     "@tanstack/react-query": "^4.33.0",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
