--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://sptmvecbo14tafpf:fpvd3a8tbsz644ak@qz8si2yulh3i7gl3.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/pic81nxp8zco8xl7"
+#test
 
 NEXT_PUBLIC_API_URL="http://localhost:3000/api"
 AZURE_PUBLIC_API_URL="https://los-toneles.azurewebsites.net"
