--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.2",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.2",
