--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/blob": "^0.23.2",
     "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.2",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.2",
+    "browser-image-compression": "^2.0.2",
     "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
